fix: add delay to jump animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,7 +128,7 @@
 }
 
 @theme {
-  --animate-jump: jump 1s both;
+  --animate-jump: jump 1s 0.3s both; /* 0.3s delay */
 
   @keyframes jump {
     0%,
